@@ -13,6 +13,15 @@ java {
 	}
 }
 
+bootRun {
+	jvmArgs = [
+			"-javaagent:/Users/jaepil/Documents/scouter/agent.java/scouter.agent.jar",
+			"-Dscouter.config=/Users/jaepil/Documents/scouter/agent.java/conf/scouter.conf",
+			"-Dobj_name=for-work",
+			"--add-opens", "java.base/java.lang=ALL-UNNAMED"
+	]
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -61,6 +70,9 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	// monitoring
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
